--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,18 @@ project(dbee)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(dbee main.cpp)
+include(FetchContent)
+
+FetchContent_Declare(
+        fmt
+        GIT_REPOSITORY https://github.com/fmtlib/fmt.git
+        GIT_TAG 11.0.2
+)
+
+FetchContent_MakeAvailable(fmt)
+
+add_executable(dbee main.cpp
+        table.cpp
+        database.cpp
+        enums/columntype.h)
+target_link_libraries(dbee fmt)
